--- a/src/nemp.dproj
+++ b/src/nemp.dproj
@@ -141,6 +141,7 @@
 			</DCCReference>
 			<DCCReference Include="PostProcessorUtils.pas"/>
 			<DCCReference Include="RatingCtrls.pas"/>
+			<DCCReference Include="TagClouds.pas"/>
 			<RcItem Include="playlist_3248_ohneAlpha.ico">
 				<ResourceType>Icon</ResourceType>
 				<ResourceId>Icon_2</ResourceId>
@@ -181,7 +182,7 @@
 						<VersionInfo Name="MajorVer">3</VersionInfo>
 						<VersionInfo Name="MinorVer">9</VersionInfo>
 						<VersionInfo Name="Release">1</VersionInfo>
-						<VersionInfo Name="Build">323</VersionInfo>
+						<VersionInfo Name="Build">324</VersionInfo>
 						<VersionInfo Name="Debug">False</VersionInfo>
 						<VersionInfo Name="PreRelease">False</VersionInfo>
 						<VersionInfo Name="Special">False</VersionInfo>
@@ -193,7 +194,7 @@
 					<VersionInfoKeys>
 						<VersionInfoKeys Name="CompanyName"/>
 						<VersionInfoKeys Name="FileDescription">Noch ein Mp3-Player</VersionInfoKeys>
-						<VersionInfoKeys Name="FileVersion">3.9.1.323</VersionInfoKeys>
+						<VersionInfoKeys Name="FileVersion">3.9.1.324</VersionInfoKeys>
 						<VersionInfoKeys Name="InternalName"/>
 						<VersionInfoKeys Name="LegalCopyright">2005-2009, Daniel Gaussmann</VersionInfoKeys>
 						<VersionInfoKeys Name="LegalTrademarks"/>
