--- a/bin/Skins/Nemp3/skin.ini
+++ b/bin/Skins/Nemp3/skin.ini
@@ -24,10 +24,12 @@ UseBlendedSelectionArtists=1
 UseBlendedSelectionAlben=1
 UseBlendedSelectionPlaylist=1
 UseBlendedSelectionMedienliste=1
+UseBlendedSelectionTagCloud=1
 UseBlendedArtists=0
 UseBlendedAlben=0
 UseBlendedPlaylist=0
 UseBlendedMedienliste=0
+UseBlendedTagCloud=0
 HideMainMenu=0
 UseDefaultButtons=0
 UseDefaultSlideButtons=1
@@ -37,10 +39,12 @@ BlendFaktorArtists=100
 BlendFaktorAlben=100
 BlendFaktorPlaylist=100
 BlendFaktorMedienliste=100
+BlendFaktorTagCloud=100
 BlendFaktorArtists2=100
 BlendFaktorAlben2=100
 BlendFaktorPlaylist2=100
 BlendFaktorMedienliste2=100
+BlendFaktorTagCloud2=100
 ButtonMode=2
 UseSeparatePlayerBitmap=1
 DrawGroupboxFramesMain=1
