--- a/bin/Skins/Nemp3/skin.ini
+++ b/bin/Skins/Nemp3/skin.ini
@@ -79,6 +79,9 @@ MaxFontColor=$00008000
 MiddleToMinComputing=2
 MiddleToMaxComputing=2
 SpecPen2CL=$00FFFFFF
+PreviewTimeColor=$00000000
+PreviewTitelColor=$00000000
+PreviewArtistColor=$00505050
 
 [DialogColors]
 ColorA=$00444444
