--- a/src/nemp.dproj
+++ b/src/nemp.dproj
@@ -147,6 +147,14 @@
 			<DCCReference Include="CloudEditor.pas">
 				<Form>CloudEditorForm</Form>
 			</DCCReference>
+			<RcItem Include="playlist_3248_ohneAlpha.ico">
+				<ResourceType>Icon</ResourceType>
+				<ResourceId>Icon_2</ResourceId>
+			</RcItem>
+			<RcItem Include="Nemp32_48_ohneAlpha.ico">
+				<ResourceType>Icon</ResourceType>
+				<ResourceId>Icon_1</ResourceId>
+			</RcItem>
 			<BuildConfiguration Include="Basis">
 				<Key>Base</Key>
 			</BuildConfiguration>
@@ -179,7 +187,7 @@
 						<VersionInfo Name="MajorVer">3</VersionInfo>
 						<VersionInfo Name="MinorVer">9</VersionInfo>
 						<VersionInfo Name="Release">2</VersionInfo>
-						<VersionInfo Name="Build">348</VersionInfo>
+						<VersionInfo Name="Build">355</VersionInfo>
 						<VersionInfo Name="Debug">False</VersionInfo>
 						<VersionInfo Name="PreRelease">False</VersionInfo>
 						<VersionInfo Name="Special">False</VersionInfo>
@@ -191,7 +199,7 @@
 					<VersionInfoKeys>
 						<VersionInfoKeys Name="CompanyName"/>
 						<VersionInfoKeys Name="FileDescription">Noch ein Mp3-Player</VersionInfoKeys>
-						<VersionInfoKeys Name="FileVersion">3.9.2.348</VersionInfoKeys>
+						<VersionInfoKeys Name="FileVersion">3.9.2.355</VersionInfoKeys>
 						<VersionInfoKeys Name="InternalName"/>
 						<VersionInfoKeys Name="LegalCopyright">2005-2009, Daniel Gaussmann</VersionInfoKeys>
 						<VersionInfoKeys Name="LegalTrademarks"/>
