--- a/src/nemp.dproj
+++ b/src/nemp.dproj
@@ -157,6 +157,9 @@
 				<Form>Wizard</Form>
 			</DCCReference>
 			<DCCReference Include="cddaUtils.pas"/>
+			<DCCReference Include="CDSelection.pas">
+				<Form>FormCDDBSelect</Form>
+			</DCCReference>
 			<RcItem Include="playlist_3248_ohneAlpha.ico">
 				<ResourceType>Icon</ResourceType>
 				<ResourceId>Icon_2</ResourceId>
