--- a/src/nemp.dproj
+++ b/src/nemp.dproj
@@ -40,7 +40,7 @@
 		</PropertyGroup>
 		<PropertyGroup Condition="'$(Cfg_2)'!=''">
 			<DCC_MapFile>3</DCC_MapFile>
-			<DCC_Define>DEBUG;$(DCC_Define)</DCC_Define>
+			<DCC_Define>DEBUG;madExcept;$(DCC_Define)</DCC_Define>
 		</PropertyGroup>
 		<ItemGroup>
 			<DelphiCompile Include="nemp.dpr">
@@ -163,6 +163,7 @@
 			<DCCReference Include="CDOpenDialogs.pas">
 				<Form>CDOpenDialog</Form>
 			</DCCReference>
+			<DCCReference Include="DeleteHelper.pas"/>
 			<RcItem Include="playlist_3248_ohneAlpha.ico">
 				<ResourceType>Icon</ResourceType>
 				<ResourceId>Icon_2</ResourceId>
