Switched to LastFM API 2.0 (ScrobblerUtils 0.2)

--- a/src/nemp.dproj
+++ b/src/nemp.dproj
@@ -167,6 +167,7 @@
 			<DCCReference Include="DeleteSelect.pas">
 				<Form>DeleteSelection</Form>
 			</DCCReference>
+			<DCCReference Include="CustomizedScrobbler.pas"/>
 			<RcItem Include="playlist_3248_ohneAlpha.ico">
 				<ResourceType>Icon</ResourceType>
 				<ResourceId>Icon_2</ResourceId>
@@ -207,7 +208,7 @@
 						<VersionInfo Name="MajorVer">4</VersionInfo>
 						<VersionInfo Name="MinorVer">3</VersionInfo>
 						<VersionInfo Name="Release">0</VersionInfo>
-						<VersionInfo Name="Build">483</VersionInfo>
+						<VersionInfo Name="Build">484</VersionInfo>
 						<VersionInfo Name="Debug">False</VersionInfo>
 						<VersionInfo Name="PreRelease">False</VersionInfo>
 						<VersionInfo Name="Special">False</VersionInfo>
@@ -219,7 +220,7 @@
 					<VersionInfoKeys>
 						<VersionInfoKeys Name="CompanyName"/>
 						<VersionInfoKeys Name="FileDescription">Noch ein Mp3-Player</VersionInfoKeys>
-						<VersionInfoKeys Name="FileVersion">4.3.0.483</VersionInfoKeys>
+						<VersionInfoKeys Name="FileVersion">4.3.0.484</VersionInfoKeys>
 						<VersionInfoKeys Name="InternalName"/>
 						<VersionInfoKeys Name="LegalCopyright">2005-2011, Daniel Gaussmann</VersionInfoKeys>
 						<VersionInfoKeys Name="LegalTrademarks"/>
