"Walkman mode", flutter on low battery

--- a/src/nemp.dproj
+++ b/src/nemp.dproj
@@ -174,6 +174,9 @@
 				<Form>WebServerLogForm</Form>
 			</DCCReference>
 			<DCCReference Include="SilenceDetection.pas"/>
+			<DCCReference Include="Lowbattery.pas">
+				<Form>FormLowBattery</Form>
+			</DCCReference>
 			<RcItem Include="playlist_3248_ohneAlpha.ico">
 				<ResourceType>Icon</ResourceType>
 				<ResourceId>Icon_2</ResourceId>
@@ -214,7 +217,7 @@
 						<VersionInfo Name="MajorVer">4</VersionInfo>
 						<VersionInfo Name="MinorVer">6</VersionInfo>
 						<VersionInfo Name="Release">0</VersionInfo>
-						<VersionInfo Name="Build">542</VersionInfo>
+						<VersionInfo Name="Build">544</VersionInfo>
 						<VersionInfo Name="Debug">False</VersionInfo>
 						<VersionInfo Name="PreRelease">False</VersionInfo>
 						<VersionInfo Name="Special">False</VersionInfo>
@@ -226,7 +229,7 @@
 					<VersionInfoKeys>
 						<VersionInfoKeys Name="CompanyName"/>
 						<VersionInfoKeys Name="FileDescription">Noch ein Mp3-Player</VersionInfoKeys>
-						<VersionInfoKeys Name="FileVersion">4.6.0.542</VersionInfoKeys>
+						<VersionInfoKeys Name="FileVersion">4.6.0.544</VersionInfoKeys>
 						<VersionInfoKeys Name="InternalName"/>
 						<VersionInfoKeys Name="LegalCopyright">2005-2012, Daniel Gaussmann</VersionInfoKeys>
 						<VersionInfoKeys Name="LegalTrademarks"/>
