--- a/bin/Skins/DarkGray/skin.ini
+++ b/bin/Skins/DarkGray/skin.ini
@@ -80,8 +80,8 @@ MaxFontColor=$00008000
 MiddleToMinComputing=2
 MiddleToMaxComputing=2
 SpecPen2CL=$00FFFFFF
-PreviewTimeColor=$00000000
-PreviewTitelColor=$00000000
+PreviewTimeColor=$00505050
+PreviewTitleColor=$00909090
 PreviewArtistColor=$00505050
 
 [DialogColors]
